 Bug 534226 -  Remove support for multiple presshells, r=bz, sr=roc