content/xul/content/src/nsXULElement.cpp
@@ -151,7 +151,6 @@
 #include "nsNodeInfoManager.h"
 #include "nsXBLBinding.h"
 #include "nsEventDispatcher.h"
-#include "nsPresShellIterator.h"
 #include "mozAutoDocUpdate.h"
 #include "nsIDOMXULCommandEvent.h"
 #include "nsIDOMNSEvent.h"
@@ -2119,9 +2118,8 @@ nsXULElement::Click()
 
     nsCOMPtr<nsIDocument> doc = GetCurrentDoc(); // Strong just in case
     if (doc) {
-        nsPresShellIterator iter(doc);
-        nsCOMPtr<nsIPresShell> shell;
-        while ((shell = iter.GetNextShell())) {
+        nsCOMPtr<nsIPresShell> shell = doc->GetPrimaryShell();
+        if (shell) {
             // strong ref to PresContext so events don't destroy it
             nsCOMPtr<nsPresContext> context = shell->GetPresContext();
 
